--- a/main.css
+++ b/main.css
@@ -3,8 +3,8 @@ html {
   padding: 0%;
 }
 
-body{
-    font-family: 'Montserrat', sans-serif;
+body {
+  font-family: "Montserrat", sans-serif;
 }
 
 #product-overview {
@@ -15,15 +15,11 @@ body{
   color: brown;
 }
 
-h1 {
+#product-overview h1 {
   color: beige;
   font-family: "Anton", sans-serif;
 }
 
-* {
-    font-family: sans-serif;
-  }
-
-/* h1 {
+h1 {
   font-family: sans-serif;
-} */
+}
