--- a/main.css
+++ b/main.css
@@ -11,10 +11,10 @@ body {
 #product-overview {
   background: tomato;
   padding: 20px;
-  border: 5px;
-  border-style: solid;
+  /* border-style: solid;
   border-color: black;
-  border-width: 5px;
+  border-width: 5px; */
+  border: 5px black solid;
   margin: 20px;
 }
 
