--- a/main.css
+++ b/main.css
@@ -10,12 +10,8 @@ body {
 
 #product-overview {
   background: tomato;
-  padding: 20px;
-  /* border-style: solid;
-  border-color: black;
-  border-width: 5px; */
-  border: 5px black solid;
-  margin: 20px;
+  width: 100%;
+  height: 528px; 
 }
 
 .section-title {
@@ -27,6 +23,6 @@ body {
   font-family: "Anton", sans-serif;
 }
 
-h1 {
+/* h1 {
   font-family: sans-serif;
-}
+} */
