--- a/main.css
+++ b/main.css
@@ -3,6 +3,10 @@ html {
   padding: 0%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0%;
@@ -11,7 +15,10 @@ body {
 #product-overview {
   background: tomato;
   width: 100%;
-  height: 528px; 
+  height: 528px;
+  padding: 10px;
+  border: 5px solid black;
+  margin: 10px;
 }
 
 .section-title {
